Uploaded images to an online image service to combat No-image display

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                             <p>Voila! Tracking routine jobs has never been so easy. <span>Welcome to the future</span>.</p>
                         </div>
                         <div class="hero-btn">
-                            <a href="/PM Olawale/intro.html"><button class="btn btn-1">PM Olawale</button></a>
-                            <a href="/PM Joshua/intro.html"><button class="btn btn-2">PM Joshua</button></a>
+                            <a href="/mrolawale/intro.html"><button class="btn btn-1">PM Olawale</button></a>
+                            <a href="/mrjoshua/intro.html"><button class="btn btn-2">PM Joshua</button></a>
                         </div>
                     </div>
                 </section>
