--- a/mrjoshua/Agbado.html
+++ b/mrjoshua/Agbado.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/iju.css">
+    <link rel="stylesheet" href="/css/agbado.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a95f65ba1d.js" crossorigin="anonymous"></script>
-    <title>Egbeda Cluster</title>
+    <title>Agbado Cluster</title>
 </head>
 <body>
     <main>
@@ -60,175 +60,213 @@
                         <th>DC-Hybrid</th>
                         <th>Electrical</th>
                         <th>Janitorial</th>
-                
-                    <tr id="LG0034">
-                        <td>LG0034</td>
+                    </tr>
+                    <tr id="LG0028">
+                        <td class=>LG0028</td>
+                        <td class="LG0028dc">DC-Hybrid</td>
+                        <td class="LG0028e">Electrical</td>
+                        <td class="LG0028j">Janitorial</td>
+                    </tr>
+                    <tr id="LG0049">
+                        <td class="LG0049">LG0049</td>
+                        <td >DC-Hybrid</td>
+                        <td>Electrical</td>
+                        <td>Janitorial</td>
+                    </tr>
+                    <tr id="LG0119">
+                        <td>LG0119</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0054">
-                        <td>LG0054</td>
+                    <tr  id="LG0124">
+                        <td>LG0124</td>
                        <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0228">
-                        <td>LG0228</td>
+                    <tr id="LG0179">
+                        <td>LG0179</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0444">
-                        <td>LG0444</td>
+                    <tr  id="LG0411">
+                        <td>LG0411</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0468">
-                        <td>LG0468</td>
+                    <tr>
+                        <td id="LG0418">LG0418</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0470">
-                        <td>LG0470</td>
+                    <tr>
+                        <td id="LG0426">LG0426</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0490">
-                        <td>LG0490</td>
+                    <tr id="LG0570">
+                        <td>LG0570</td>
+                        <td class="LG0570dc">DC-Hybrid</td>
+                        <td class="0570e">Electrical</td>
+                        <td class="LG0570j">Janitorial</td>
+                    </tr>
+                    <tr  id="LG0571">
+                        <td>LG0571</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0665">
-                        <td>LG0665</td>
+                    <tr id="LG0702">
+                        <td>LG0702</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0672">
-                        <td>LG0672</td>
+                    <tr  id="LG0704">
+                        <td>LG0704</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0755">
-                        <td>LG0755</td>
+                    <tr id="LG0732">
+                        <td>LG0732</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0757">
-                        <td>LG0757</td>
+                    <tr  id="LG0773">
+                        <td>LG0773</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0762">
-                        <td>LG0762</td>
+                    <tr  id="LG0774">
+                        <td>LG0774</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0764">
-                        <td>LG0764</td>
+                    <tr  id="LG0775">
+                        <td>LG0775</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0877">
-                        <td>LG0877</td>
+                    <tr  id="LG0849">
+                        <td>LG0849</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0884">
-                        <td>LG0884</td>
+                    <tr>
+                        <td id="LG0890">LG0890</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0885">
-                        <td>LG0885</td>
+                    <tr>
+                        <td id="LG0906">LG0906</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1745">
-                        <td>LG1745</td>
+                    <tr>
+                        <td id="LG1781">LG1781</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1754">
-                        <td>LG1754</td>
+                    <tr>
+                        <td id="LG1861">LG1861</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1755">
-                        <td>LG1755</td>
+                    <tr>
+                        <td id="LG1904">LG1904</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1758">
-                        <td>LG1758</td>
+                    <tr>
+                        <td id="LG2078">LG2078</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1760">
-                        <td>LG1760</td>
+                    <tr>
+                        <td id="LG2158">LG2158</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1761">
-                        <td>LG1761</td>
+                    <tr>
+                        <td id="LG2559">LG2559</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1766">
-                        <td>LG1766</td>
+                    <tr>
+                        <td id="LG3621">LG3621</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1767">
-                        <td>LG1767</td>
+                    <tr>
+                        <td id="LG3626">LG3626</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG2151">
-                        <td>LG2151</td>
+                    <tr>
+                        <td id="LG4221">LG4221</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG3691">
-                        <td>LG3691</td>
+                    <tr>
+                        <td id="LG4432">LG4432</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG4270">
-                        <td>LG4270</td>
+                    <tr>
+                        <td id="LG5405">LG5405</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    
+                    <tr>
+                        <td id="LG5583">LG5583</td>
+                        <td>DC-Hybrid</td>
+                        <td>Electrical</td>
+                        <td>Janitorial</td>
+                    </tr>
+                    <tr>
+                        <td id="LG6542">LG6542</td>
+                        <td>DC-Hybrid</td>
+                        <td>Electrical</td>
+                        <td>Janitorial</td>
+                    </tr>
+                    <tr>
+                        <td id="OG1879">OG1879</td>
+                        <td>DC-Hybrid</td>
+                        <td>Electrical</td>
+                        <td>Janitorial</td>
+                    </tr>
                 </table>
             </section>
         </section>
+
+        <!----------------------------------------- FOOTER  -->
+
         <section class="back">
-            <a href="/PM Joshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
+            <a href="/mrjoshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
         </section>
         <section class="footer">
             <footer><p><span class="copyright">&#169</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
