--- a/mrjoshua/Ayobo.html
+++ b/mrjoshua/Ayobo.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Ikeja-B.css">
+    <link rel="stylesheet" href="/css/ayobo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a95f65ba1d.js" crossorigin="anonymous"></script>
-    <title>Ikeja-B Cluster</title>
+    <title>Ayobo Cluster</title>
 </head>
 <body>
     <main>
@@ -61,164 +61,152 @@
                         <th>Electrical</th>
                         <th>Janitorial</th>
                 
-                    <tr id="LG0034">
-                        <td>LG0034</td>
+                    <tr id="LG0106">
+                        <td>LG0106</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0054">
-                        <td>LG0054</td>
+                    <tr  id="LG0107">
+                        <td>LG0107</td>
                        <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0228">
-                        <td>LG0228</td>
+                    <tr  id="LG0143">
+                        <td>LG0143</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0444">
-                        <td>LG0444</td>
+                    <tr id="LG0235">
+                        <td>LG0235</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0468">
-                        <td>LG0468</td>
+                    <tr id="LG0407">
+                        <td>LG0407</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0470">
-                        <td>LG0470</td>
+                    <tr id="LG0409">
+                        <td>LG0409</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0490">
-                        <td>LG0490</td>
+                    <tr id="LG0415">
+                        <td>LG0415</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0665">
-                        <td>LG0665</td>
+                    <tr id="LG0469">
+                        <td>LG0469</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0672">
-                        <td>LG0672</td>
+                    <tr id="LG0759">
+                        <td>LG0759</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0755">
-                        <td>LG0755</td>
+                    <tr id="LG0907">
+                        <td>LG0907</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0757">
-                        <td>LG0757</td>
+                    <tr id="LG0908">
+                        <td>LG0908</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0762">
-                        <td>LG0762</td>
+                    <tr id="LG1737">
+                        <td>LG1737</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0764">
-                        <td>LG0764</td>
+                    <tr id="LG1744">
+                        <td>LG1744</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0877">
-                        <td>LG0877</td>
+                    <tr id="LG1896">
+                        <td>LG1896</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0884">
-                        <td>LG0884</td>
+                    <tr id="LG2089">
+                        <td>LG2089</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0885">
-                        <td>LG0885</td>
+                    <tr id="LG2095">
+                        <td>LG2095</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1745">
-                        <td>LG1745</td>
+                    <tr id="LG3449">
+                        <td>LG3449</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1754">
-                        <td>LG1754</td>
+                    <tr id="LG3868">
+                        <td>LG3868</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1755">
-                        <td>LG1755</td>
+                    <tr id="LG3994">
+                        <td>LG3994</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1758">
-                        <td>LG1758</td>
+                    <tr id="LG4044">
+                        <td>LG4044</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1760">
-                        <td>LG1760</td>
+                    <tr id="LG4219">
+                        <td>LG4219</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1761">
-                        <td>LG1761</td>
+                    <tr id="OG1836">
+                        <td>OG1836</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1766">
-                        <td>LG1766</td>
+                    <tr id="OG1837">
+                        <td>OG1837</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1767">
-                        <td>LG1767</td>
+                    <tr id="OG1838">
+                        <td>OG1838</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG2151">
-                        <td>LG2151</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr id="LG3691">
-                        <td>LG3691</td>
-                        <td>DC-Hybrid</td>
-                        <td>Electrical</td>
-                        <td>Janitorial</td>
-                    </tr>
-                    <tr id="LG4270">
-                        <td>LG4270</td>
+                    <tr id="LG4378">
+                        <td>LG4378</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
