--- a/mrjoshua/Iju.html
+++ b/mrjoshua/Iju.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/agege.css">
+    <link rel="stylesheet" href="/css/iju.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a95f65ba1d.js" crossorigin="anonymous"></script>
-    <title>Agege Cluster</title>
+    <title>Iju Cluster</title>
 </head>
 <body>
     <main>
@@ -61,152 +61,164 @@
                         <th>Electrical</th>
                         <th>Janitorial</th>
                 
-                    <tr id="LG0030">
-                        <td>LG0030</td>
+                    <tr id="LG0034">
+                        <td>LG0034</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0113">
-                        <td>LG0113</td>
+                    <tr  id="LG0054">
+                        <td>LG0054</td>
                        <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0121">
-                        <td>LG0121</td>
+                    <tr  id="LG0228">
+                        <td>LG0228</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr  id="LG0280">
-                        <td>LG0280</td>
+                    <tr id="LG0444">
+                        <td>LG0444</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0283">
-                        <td>LG0283</td>
+                    <tr id="LG0468">
+                        <td>LG0468</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0567">
-                        <td>LG0567</td>
+                    <tr id="LG0470">
+                        <td>LG0470</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0650">
-                        <td>LG0650</td>
+                    <tr id="LG0490">
+                        <td>LG0490</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0658">
-                        <td>LG0658</td>
+                    <tr id="LG0665">
+                        <td>LG0665</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0659">
-                        <td>LG0659</td>
+                    <tr id="LG0672">
+                        <td>LG0672</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0661">
-                        <td>LG0661</td>
+                    <tr id="LG0755">
+                        <td>LG0755</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0663">
-                        <td>LG0663</td>
+                    <tr id="LG0757">
+                        <td>LG0757</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0666">
-                        <td>LG0666</td>
+                    <tr id="LG0762">
+                        <td>LG0762</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0735">
-                        <td>LG0735</td>
+                    <tr id="LG0764">
+                        <td>LG0764</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG0938">
-                        <td>LG0938</td>
+                    <tr id="LG0877">
+                        <td>LG0877</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1669">
-                        <td>LG1669</td>
+                    <tr id="LG0884">
+                        <td>LG0884</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1670">
-                        <td>LG1670</td>
+                    <tr id="LG0885">
+                        <td>LG0885</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1786">
-                        <td>LG1786</td>
+                    <tr id="LG1745">
+                        <td>LG1745</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG1795">
-                        <td>LG1795</td>
+                    <tr id="LG1754">
+                        <td>LG1754</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG2604">
-                        <td>LG2604</td>
+                    <tr id="LG1755">
+                        <td>LG1755</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG2781">
-                        <td>LG2781</td>
+                    <tr id="LG1758">
+                        <td>LG1758</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG2881">
-                        <td>LG2881</td>
+                    <tr id="LG1760">
+                        <td>LG1760</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG3023">
-                        <td>LG3023</td>
+                    <tr id="LG1761">
+                        <td>LG1761</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG3322">
-                        <td>LG3322</td>
+                    <tr id="LG1766">
+                        <td>LG1766</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG3365">
-                        <td>LG3365</td>
+                    <tr id="LG1767">
+                        <td>LG1767</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
                     </tr>
-                    <tr id="LG4501">
-                        <td>LG4501</td>
+                    <tr id="LG2151">
+                        <td>LG2151</td>
+                        <td>DC-Hybrid</td>
+                        <td>Electrical</td>
+                        <td>Janitorial</td>
+                    </tr>
+                    <tr id="LG3691">
+                        <td>LG3691</td>
+                        <td>DC-Hybrid</td>
+                        <td>Electrical</td>
+                        <td>Janitorial</td>
+                    </tr>
+                    <tr id="LG4270">
+                        <td>LG4270</td>
                         <td>DC-Hybrid</td>
                         <td>Electrical</td>
                         <td>Janitorial</td>
@@ -216,7 +228,7 @@
             </section>
         </section>
         <section class="back">
-            <a href="/PM Joshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
+            <a href="/mrjoshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
         </section>
         <section class="footer">
             <footer><p><span class="copyright">&#169</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
