--- a/mrjoshua/intro.html
+++ b/mrjoshua/intro.html
@@ -30,22 +30,22 @@
             <section class="clusters">
                 <ul class="clusters-wrapper">
                     <li>
-                        <button><a href="/PM Joshua/Agbado.html">Agbado</a></button>
+                        <button><a href="/mrjoshua/Agbado.html">Agbado</a></button>
                     </li>
                     <li>
-                         <button><a href="/PM Joshua/Agege.html">Agege</a></button>
+                         <button><a href="/mrjoshua/Agege.html">Agege</a></button>
                     </li>
                     <li>
-                        <button><a href="/PM Joshua/Ayobo.html">Ayobo</a></button>
+                        <button><a href="/mrjoshua/Ayobo.html">Ayobo</a></button>
                     </li>
                     <li>
-                       <button><a href="/PM Joshua/Egbeda.html">Egbeda</a></button>
+                       <button><a href="/mrjoshua/Egbeda.html">Egbeda</a></button>
                     </li>
                     <li>
-                       <button><a href="/PM Joshua/Iju.html">Iju</a></button>
+                       <button><a href="/mrjoshua/Iju.html">Iju</a></button>
                     </li>
                     <li>
-                       <button><a href="/PM Joshua/Ikeja B.html">Ikeja B</a></button>
+                       <button><a href="/mrjoshua/Ikeja B.html">Ikeja B</a></button>
                     </li>
                 </ul>
             </section>
