--- a/mrjoshua/Egbeda.html
+++ b/mrjoshua/Egbeda.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/iju.css">
+    <link rel="stylesheet" href="/css/egbeda.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a95f65ba1d.js" crossorigin="anonymous"></script>
-    <title>Iju Cluster</title>
+    <title>Egbeda Cluster</title>
 </head>
 <body>
     <main>
@@ -228,7 +228,7 @@
             </section>
         </section>
         <section class="back">
-            <a href="/PM Joshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
+            <a href="/mrjoshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
         </section>
         <section class="footer">
             <footer><p><span class="copyright">&#169</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
