--- a/mrjoshua/Ikeja-B.html
+++ b/mrjoshua/Ikeja-B.html
@@ -228,10 +228,10 @@
             </section>
         </section>
         <section class="back">
-            <a href="/PM Joshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
+            <a href="/mrjoshua/intro.html"><span class="arrow"><i class="fa-solid fa-angle-left"></i></span>Back to Clusters</a>
         </section>
         <section class="footer">
-            <footer><p><span class="copyright">&#169</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
+            <footer><p><span class="copyright">&#169;</span> 2023 Arofin Olatunji. All Rights Reserved</p></footer>
         </section>
     </main>
 </body>
