--- a/mrjoshua/intro.html
+++ b/mrjoshua/intro.html
@@ -45,7 +45,7 @@
                        <button><a href="/mrjoshua/Iju.html">Iju</a></button>
                     </li>
                     <li>
-                       <button><a href="/mrjoshua/Ikeja B.html">Ikeja B</a></button>
+                       <button><a href="/mrjoshua/Ikeja-B.html">Ikeja B</a></button>
                     </li>
                 </ul>
             </section>
